tests/fixtures/invalid/none_bitand_bool.py
# Cannot bitwise AND None and Bool
x: None = None & True
